--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </div>
 
                 <div>
-                    <h2 class="about__subtitle">I'm Kiprotich</h2>
+                    <h2 class="about__subtitle">A motivated software Dev</h2>
                     <p class="about__text">- I am a Computer science graduate and a front end software developer
                         majoring
                         on web development.</br>
